--- a/Javascript/Javascript_Básico/exercicio3/index.html
+++ b/Javascript/Javascript_Básico/exercicio3/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-  <button onclick="clickEvent();">Entrar</button>
+  <button id="button">Entrar</button>
+
+  <h1 id="h1"></h1>
 
   <script src="script.js"></script>
 
