--- a/Javascript/Javascript_Básico/exercicio4/index.html
+++ b/Javascript/Javascript_Básico/exercicio4/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Exercise4</title>
   <style>
   </style>
 </head>
 
 <body>
-  <button onclick="clickEvent();">Entrar</button>
+  <button id="button">Entrar</button>
 
+  <h1 id="h1"></h1>
   <script src="script.js"></script>
 
   </button>
