--- a/Javascript/Javascript_Básico/exercicio5/index.html
+++ b/Javascript/Javascript_Básico/exercicio5/index.html
@@ -5,13 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-  </style>
+  <title>Exercise5</title>
 </head>
 
 <body>
-  <button onclick="tabuada()">Entrar</button>
 
   <script src="script.js"></script>
 
