--- a/Javascript/Javascript_Básico/exercicio2/index.html
+++ b/Javascript/Javascript_Básico/exercicio2/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>exercise2</title>
+  <title>Document</title>
 </head>
-
 <body>
-  <script src="script.js"> </script>
-</body>
+  <h1 id="h1">
 
+  </h1>
+
+  <script src="script.js"></script>
+</body>
 </html>
