--- a/Javascript/Javascript_Intermediário/exercicio1/index.html
+++ b/Javascript/Javascript_Intermediário/exercicio1/index.html
@@ -4,31 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
+  <title>Exercise 01</title>
   <style>
-    input {
-      border: none;
-      font-size: 2rem;
+    .buttons {
+      display: flex;
+      align-items: center;
     }
 
-    input:disabled {
-      background-color: white;
+    .buttons .decrement {
+      margin-right: 5px;
+      padding: 10px 15px;
+      cursor: pointer;
     }
 
-    button {
-      font-size: 20px;
-      padding: 7px 15px 7px 15px;
+    .buttons .increment {
+      cursor: pointer;
+      margin-right: 5px;
+      padding: 10px 15px;
+    }
+
+    .value {
+      font-size: 2em;
     }
   </style>
-
 </head>
 <body>
-  
-  <input type="text" value="0" disabled id="counterValue"> <br>
-  <button id="botaoDecrement">-</button>
-  <button id="botaoIncrement">+</button>
-
+  <div class="value">0</div>
+  <div class="buttons">
+    <button class="decrement">-</button>
+    <button class="increment">+</button>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
