doing exercises of javacript

--- a/Javascript/Javascript_Avançado/exercicio1.1/index.html
+++ b/Javascript/Javascript_Avançado/exercicio1.1/index.html
@@ -7,8 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  
-
-  <script src="js/script.js"></script>
+  <ul class="showingGrades"></ul>
+  <label for="">Digite uma nota para filtrar os alunos:</label>
+  <input type="text" class="grade">
+  <button id="buttonFilter">Filtrar</button>
+  <script src="script.js"></script>
 </body>
 </html>
